fixed issues shwoing on safari

--- a/frontend/src/components/FormElements/MyButton.css
+++ b/frontend/src/components/FormElements/MyButton.css
@@ -24,7 +24,6 @@
 }
 
 .outer-span {
-    /* border: 1px solid black; */
     position: absolute;
     top: 0px;
     left: 0px;
@@ -46,10 +45,14 @@
     transition: opacity 1.25s ease 0s;
     background-image: radial-gradient(circle at center center, rgb(255, 56, 92) 0%, rgb(230, 30, 77) 27.5%, rgb(227, 28, 95) 40%, rgb(215, 4, 102) 57.5%, rgb(189, 30, 89) 75%, rgb(189, 30, 89) 100%);
     background-position: calc((100 - var(--mouse-x, 0)) * 1%) calc((100 - var(--mouse-y, 0)) * 1%);
+    border-radius: 8px;
+    overflow: hidden;
 }
 
 .inner-span:hover {
     opacity: 1;
+    border-radius: 8px;
+    overflow: hidden;
 }
 
 .lower-span {
